correcoes feitas
